# Miinaharava-peli

./: .gitignore  Dockerfile  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: config.py  index.py  initialize_database.py
src/entities/: highscores.py
src/game/: board.py  game.py  piece.py
src/repositories/: score_repository.py  user_repository.py
src/services/: game_service.py  login_service.py  score_service.py
src/tests/game/: game_test.py
src/tests/repositories/: highscore_repository_test.py  user_repository_test.py
src/tests/services/: game_service_test.py  login_service_test.py
src/ui/: createuser_view.py  end_view.py  highscores_view.py  highscores_view_easy.py  highscores_view_hard.py  highscores_view_medium.py  login_view.py  mainmenu_view.py  play_view.py  ui.py
