[tool.poetry]
name = "Python-Miinaharava"
version = "0.1.0"
description = ""
authors = ["hakkajoe <joelhakkarainen95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
